<resources>
    <string name="app_name" translatable="false">Анонимный чат</string>
    <string name="messagebox_hint">Введите сообщение</string>
    <string name="send_button">send</string>
    <string name="login">Введите ваше ник</string>
    <string name="age">Введите ваш возраст</string>
    <string name="your_sex">Выберите ваш пол</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="all_sex">Неважно</string>
    <string name="opponent_sex">Выберите пол собеседника</string>
    <string name="start_searching">Начать поиск</string>
    <string name="name_hint">До 20 символов</string>
    <string name="age_hint">1-99</string>
    <string name="searching">Поиск собеседника</string>
    <string name="stop_searching">Завершить поиск</string>
    <string name="long_searching">
        Поиск собеседника может занять долгое время, так как приложение новое.
        Также попробуйте изменить параметры поиска.
    </string>
    <string name="close_dialog">Закончить диалог</string>
    <string name="start_instruction_light">
        Когда будете готовы начать диалог,
        нажмите на кнопку. Проявляйте уважение к собеседнику.\n
        Вы начнете общение со случайным собеседником.\n\n

        На данный момент приложение только начинает свою работу, поэтому
        могут быть замечены ошибки. Просьба писать о замеченных ошибках разработчику в Telegram.
        \n\n Будте терпеливы, сейчас в приложении может быть небольшое количество людей, так как
        приложение запущено недавно.
    </string>
    <string name="connection_with_support">Связь с разработчиком</string>
    <string name="in_develop">В разработке</string>
    <string name="in_develop_text">
        На ближайшее время запланированы следующие обновления:\n
        - Отправка фото\n
        - Отправка голосовых сообщений\n
        - Функция поиска по полу собеседника\n
        - Привелегированная функция выбора пола собеседника без очереди\n
    </string>
    <string name="banner_ad_unit_id">ca-app-pub-4521312710447672/3055315310</string>
</resources>